<resources>
    <string name="app_name">KnockDoc</string>
    <string name="who_are_you">Who are You?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="clinic_name">Clinic/Hospital Name</string>
    <string name="reg_number">Registration Number</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email Address</string>
    <string name="mob_no">Mobile No.</string>
    <string name="gender">Gender</string>
    <string name="pathlab_name">Pathology Name</string>
    <string name="address">Address</string>
    <string name="city">Enter City</string>
    <string name="name">Name</string>
    <string name="login_here">Login Here</string>
    <string name="register_now">Register Now</string>
    <string name="new_user">New Here? Register Now</string>
    <string name="create_account">Register Yourself with KNOCKDOC</string>
    <string name="forget_pwd">Forget Password?</string>
    <string name="state">Enter State</string>
    <string name="doctor_degree">Doctor\'s Degree</string>
    <string name="password">Password</string>
    <string name="sign_in_to_continue">Login to Continue</string>
    <string name="login">Login</string>
    <string name="doct_personal_details">Add Personal Details</string>
    <string name="nationality">Country</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="hospital_address">Clinic/Hospital\'s Address</string>
    <string name="hospital_pin">Clinic/Hospital\'s PIN-CODE</string>
    <string name="back">BACK</string>
    <string name="hospital_details">Add Clinic/Hospital\'s Details</string>
    <string name="hospital_city">Enter Hospital\'s City</string>
    <string name="register_hospital">Register Clinic</string>
    <string name="register_mobile">Register Mobile No</string>
    <string name="contact_detail">Add Contact Details</string>
    <string name="register_with_email">Register With Email</string>
    <string name="register_with_mobile">Register With Mobile No.</string>
    <string name="register_email">Register Email Address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="otp_slogan">we will send you an <b>One Time Password</b></string>
    <string name="otp_slogan2">on this mobile number</string>
    <string name="title_activity_registration_gender_d_o_b">RegistrationGenderDOB</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="choose_pwd">Select Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="choose_pwd_text">Enter a secure Password</string>
    <string name="verify_contact">Verify Contact</string>
    <string name="otp_desc">Enter the OTP that has been\nsend to +919045884864</string>
    <string name="welcome">Welcome! </string>
    <string name="dr_name">Dr. Mohit Sharma</string>
    <string name="doc_degree">M.B.B.S (M.D) Bombay</string>
    <string name="specility">Child Specialist</string>
    <string name="upload_image">Upload Profile Pic</string>
    <string name="make_a_dp">Make A profile Pic</string>
    <string name="profile_pic_slogan">Upload a profile pic</string>
    <string name="skip">Skip for Now</string>
    <string name="appointments">Appointments</string>
    <string name="prescription">Prescription</string>
    <string name="schedule">Schedule</string>
    <string name="refer">Refer Patient</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_location">Add Location</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="appointment_req">Appointment Requests</string>
    <string name="appointment_view">View Appointments</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="pin_code">Enter PIN Code</string>
    <string name="choose_pwd_and_mob_no">Choose Password And Mob No.</string>
    <string name="dr_exp">with experience of 10 years</string>
    <string name="bio_doctor_will_this_thing_by_himself">BIO:Doctor will this thing by himself</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="name_with_surname">Name With Surname</string>
    <string name="register_mobile_for">Register Your Mobile No. For User Verification</string>
    <string name="enter_mob">Enter Mobile No</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_slogan_emal">On this <b>Email Address</b></string>
    <string name="enter_email">Enter Email Address</string>
    <string name="Verification_Code">Verification Code</string>
    <string name="otp_ver_slogan">An <b>One Time Password</b> is Sent</string>
    <string name="otp_slogan_emal_ver">On Email Address <b>ajaybly7890@gmail.com</b></string>
    <string name="did_not_get_otp">Didn not Get OTP?</string>
    <string name="verified">Verification Successful</string>
    <string name="congratulation">Congratulation</string>
    <string name="ajay">Ajay Maurya</string>
    <string name="verified_slogan"> Now You are a Member of</string>
    <string name="knockdoc">KNOCKDOC</string>
    <string name="goto_home">Go To Homepage</string>
    <string name="make_a_pwd">Make A Strong Password</string>
    <string name="password_slogan">This Password will be Your Login Password</string>
    <string name="otp_slogan3">on your <b>Registered Mobile No</b></string>
    <string name="regestered_mobile">Registered Mobile No</string>
    <string name="rs">\u20B9</string>
    <string name="emoji">KNOCKDOC! &#128522;</string>

    <string-array name="country_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>Others</item>
    </string-array>
</resources>