<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doc_background"
    tools:context=".doctor.DoctorRegistration_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="140dp"
            android:padding="25dp"
            android:src="@drawable/doctor_registration_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/revalia"
            android:text="@string/register_now"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/create_account"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doctor_fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_edit_24"
                android:drawablePadding="10dp"
                android:hint="@string/full_name"

                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doctor_registration_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_new_releases_24"
                android:drawablePadding="10dp"
                android:hint="@string/reg_number"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/doctor_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColorHint="#434040"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:drawablePadding="10dp"
            android:hint="@string/dob"
            android:inputType="date"
            android:padding="20dp"
            app:mask="__ - __ - ____"
            app:maskStyle="completable" />


        <AutoCompleteTextView
            android:id="@+id/actv"
            android:textColorHint="#434040"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background"
            android:completionThreshold="1"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/choose_gender"
            android:padding="20dp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="gotoDoctorRegistrationPage2"
            android:padding="15dp"
            android:text="@string/next"
            android:textSize="18sp" />

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="gotoDoctorSignIn"
            android:text="@string/already_have_an_account"
            android:textColor="#000" />

    </LinearLayout>


</ScrollView>